--- a/style.css
+++ b/style.css
@@ -1,10 +1,45 @@
 html, body {
-  margin:0;
+  padding:2vw;
   /* overflow:hidden */
 }
 
 .NextButton{
-  position:absolute;
-  top: 100;
-  z-index: 100;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  /* color: white; */
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+
+  position: absolute;
+  top:83vh;
+  left:50vw;
+
+  
+
+}
+.button {
+  background-color: rgb(201, 235, 10); 
+  color: black; 
+  border: 2px solid rgb(94, 76, 175);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+
+
+.button:hover {
+  background-color: rgb(76, 175, 106);
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
+.button:active {
+  background-color: #da5151;
+  box-shadow: 0 5px rgb(169, 199, 59);
+  transform: translateY(4px);
 }
